# yew-mystore

./: .gitignore  Cargo.toml
server/: Cargo.toml
server/src/: main.rs
src/: dashboard.rs  fetching.rs  index.rs  lib.rs  login.rs  register.rs  routing.rs
src/graphql/: apollo.config.js  dashboard.graphql  list_sale.graphql  mod.rs  query.graphql  schema.graphql
static/: index.html
